# AxiomWarxp

./: .kilocodemodes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSATION_AUDIT_LEDGER.md  DEPLOYMENT.md  PATTERN_SUMMARY.md  PRINCIPLES.md  README.md  SECURITY.md  STRATEGY.md  TODO.md  build.py  requirements_fixed.txt  sonar-project.properties  todo.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  deterministic-testing.yml  release-provenance.yml
ARTIFACTS/: adag_config.json  genesis_refractor.py  ledger_schema.json
AgentMatrix/: Cargo.toml
AgentMatrix/src/: agents.rs  encryption.rs  ethics.rs  lib.rs  main.rs  orchestration.rs  ux.rs
AxiomHive/: DEPLOYMENT.md  PRINCIPLES.md  STRATEGY.md  conceptual_architecture.mermaid
AxiomHive/conceptual_code/: axiom_seal.py  axiomatic_logic_engine.py  devdollz_agent.py
DevDollz/: Dockerfile  README.md  agent_configs.json  docker-compose.yml  requirements.txt
DevDollz/tests/: integration_tests.py  test_kernel.py
GodProtocol/migrations/: 001_create_tables.sql
GodProtocol/src/: protocol.py
SovereignHasher/: STRATEGY.md
SovereignHasher/ARTIFACTS/: Cargo.toml
TranscendentAI/: README.md  requirements.txt
TranscendentAI/tests/: test_reasoning.py
VALIDATION/: integrity_attestation.txt
VALIDATION/ci/: validation.yml
VALIDATION/schemas/: strategy_schema.json
axiom-command-center/: TODO.md  index.html  package-lock.json  package.json  vite.config.ts
axiom-terminal/: package.json
axiom-terminal/src-tauri/: Cargo.toml  tauri.conf.json
axiom-terminal/src-tauri/src/: lib.rs  main.rs
axiom-terminal/src-tauri/src/ai/: mod.rs
axiom-terminal/src-tauri/src/plugins/: mod.rs
axiom-terminal/src-tauri/src/terminal/: mod.rs
scripts/: fix_dependencies.py  normalize_builds.py  platform_compat.py
windows-desktop-ai-app/: pyproject.toml  requirements-dev.txt  requirements.txt
windows-desktop-ai-app/desktop_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt
windows-desktop-ai-app/src/: main.py
(+43 files in other folders)
