[package]
name = "axiom-terminal"
version = "1.0.0"
description = "Next-generation terminal with AI superpowers"
authors = ["AxiomHive"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = ["api-all", "shell-all", "os-all", "dialog-all", "fs-all", "window-all", "system-tray-all"] }
portable-pty = "0.7"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
